--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@angular-eslint/eslint-plugin-template": "17.2.1",
     "@angular-eslint/schematics": "17.2.1",
     "@angular-eslint/template-parser": "17.2.1",
-    "@angular/cli": "17.2.0",
+    "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "17.2.1",
     "@angular/language-service": "17.2.1",
     "@types/datatables.net": "^1.10.21",
