--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jquery": "^3.6.0",
     "lit": "3.1.2",
     "luxon": "3.4.4",
+    "ngrx-store-localstorage": "^19.0.0",
     "ngx-google-analytics": "14.0.1",
     "ngx-toastr": "18.0.0",
     "process": "0.11.10",
