--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,19 @@ jobs:
         with:
           node-version: '20.x' # Use Node.js 18.x or higher for Angular 17+
 
+      - name: Create .env file
+        run: |
+          echo "GA_ID=${{ secrets.GA_ID }}" > .env
+          echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
+
       - name: Install dependencies
-        run: npm ci # Use npm ci for faster installs and consistency in CI
+        run: npm ci
+
+      - name: Run setEnv.ts script
+        run: node setEnv.ts --environment=prod
 
       - name: Build Angular project
-        run: npm run build -- --configuration=production # Ensure the correct build command
+        run: npm run build -- --configuration=production
 
       - name: Run tests
         run: npm test
