gh pages change

--- a/angular.json
+++ b/angular.json
@@ -51,6 +51,8 @@
           },
           "configurations": {
             "production": {
+              "outputPath": "dist/vaalai",
+              "baseHref": "/vaalai/",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
