--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
-name: Deploy Angular App
+name: Deploy Angular to GitHub Pages
 
 on:
   push:
     branches:
       - main
+
+permissions:
+  contents: write  # Required for GitHub Pages deployment
 
 jobs:
   build:
@@ -16,18 +19,18 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x' # Use Node.js 18.x or higher for Angular 17+
+          node-version: '20.x'
 
       - name: Create .env file
         run: |
           echo "GA_ID=${{ secrets.GA_ID }}" > .env
           echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
-          
+
       - name: Install dependencies
-        run: npm ci # Use npm ci for faster installs and consistency in CI
+        run: npm ci
 
-      - name: Build Angular project
-        run: npm run build -- --configuration=production # Ensure the correct build command
+      - name: Build Angular app
+        run: npm run build -- --configuration=production --base-href="/vaalai/"
 
-      - name: Run tests
-        run: npm test
+      - name: Deploy to GitHub Pages
+        run: npx angular-cli-ghpages --dir=dist/vaalai
