--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,3 +34,6 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: npx angular-cli-ghpages --dir=dist/vaalai
+        env:
+          CI: true
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
