--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,10 @@ jobs:
         run: npm ci
 
       - name: Build Angular app
-        run: npm run build -- --configuration=production --base-href="/vaalai/"
+        run: |
+              git config --global user.email "github-actions[bot]@users.noreply.github.com"
+              git config --global user.name "github-actions[bot]"
+              npm run build -- --configuration=production --base-href="/vaalai/"
 
       - name: Deploy to GitHub Pages
         run: npx angular-cli-ghpages --dir=dist/vaalai --branch=gh-pages
