--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,7 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "../out-tsc/app",
-        "types": ["node"]
+        "types": ["node","datatables.net"]
     },
     "files": ["src/main.ts", "src/polyfills.ts"],
     "include": ["**/*.d.ts"],
